--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -5,13 +5,13 @@
     justify-content: center;
 }
 .navBox {
-    border: 1px solid rgba(0, 0, 0, 0.3);   
+    /* border: 1px solid rgba(0, 0, 0, 0.3);    */
     padding: 10px;
     transition: all;
     min-width: 80px; 
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;  
-    box-shadow: inset 0em -1px rgba(0,0,0,0.2);
+    /* border-top-left-radius: 5px; */
+    /* border-top-right-radius: 5px;   */
+    /* box-shadow: inset 0em -1px rgba(0,0,0,0.2); */
     height: 50px;
     text-align: center;
     transition: all, ease-out;
@@ -19,21 +19,26 @@
     transition-duration: 100ms;
 }
 
+.navBox a{
+    color: rgba(0,0,0,0.3);
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .navBox:hover {
-    background-color: rgba(70, 101, 183, 0.5)
+    /* background-color: rgba(70, 101, 183, 0.5) */
 }
 
 
 
 .navBox.navBox-active {
-    border-bottom-color: transparent;
-    box-shadow: 1.5px 0px 0px 0.0px rgba(0,0,0,0.2);   
+    /* border-bottom-color: transparent; */
+    /* box-shadow: 1.5px 0px 0px 0.0px rgba(0,0,0,0.2);    */
     transform: scale(1.1, 1);
-    background-color: rgb(70, 101, 183);
-    
+    /* background-color: rgb(70, 101, 183); */
 }
 .navBox.navBox-active a{
-    color: white;
+    color: #4665b7;
 }
 
 
@@ -42,7 +47,7 @@
     flex:auto;
     color: transparent;
     border-color: transparent;
-    border-bottom-color: rgba(0, 0, 0, 0.3);
+    /* border-bottom-color: rgba(0, 0, 0, 0.3); */
     min-width: 0px;
 }
 
