--- a/src/components/authorDescription.scss
+++ b/src/components/authorDescription.scss
@@ -1,19 +1,46 @@
 .author-thumbnail{
     width: 100px;
+    min-width: 100px;
     height: 100px;
     margin-right: 16px;
+    background-color: rgba(0,0,0,0.05);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     img{ 
-        width: 100%;
-        background-color: rgba(0,0,0,0.05);
+        width: 90%;
+        
         margin-bottom: 0;
     }
-
-   
 }
 
  .author-description-wrapper{
         display: flex;
         align-items: center;
+        border-bottom: 1px solid dimgray;
+        padding-bottom: 16px;
 }
 
+.author-desc{
+    height: 100px;
+    max-height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.author-link-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-bottom: 4px;
+}
+
+.author-link{
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    
+
+}
