--- a/src/components/authorDescription.scss
+++ b/src/components/authorDescription.scss
@@ -9,7 +9,7 @@
   justify-content: center;
 
   img {
-    width: 90%;
+    width: 100%;
 
     margin-bottom: 0;
   }
@@ -20,6 +20,13 @@
   align-items: center;
   border-bottom: 1px solid dimgray;
   padding-bottom: 16px;
+
+  a {
+    all: unset;
+    cursor: pointer;
+    width: 90%;
+    height: 90%;
+  }
 }
 
 .author-desc {
@@ -46,12 +53,19 @@
 .author-description-wrapper-small {
   display: flex;
   align-items: center;
+  a {
+    all: unset;
+    cursor: pointer;
+    width: 90%;
+    height: 90%;
+  }
   .author-thumbnail {
     width: 50px;
     min-width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 8px;
+    margin-bottom: 8px;
   }
   .author-name {
     font-size: 12px;
