#84 태그 제거, 작가소개 줄 위치

--- a/src/components/authorDescription.scss
+++ b/src/components/authorDescription.scss
@@ -18,8 +18,9 @@
 .author-description-wrapper {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid dimgray;
+  // border-bottom: 1px solid dimgray;
   padding-bottom: 16px;
+  padding-top: 16px;
 
   a {
     all: unset;
