--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -1,5 +1,10 @@
 .blog-post img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.image-to-left-wrapper span {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
